casos de uso basicos de moneda y moneda-conversion (sin control errores ni validaciones)

--- a/Implementacion/proySC/module/Application/view/layout/layout.phtml
+++ b/Implementacion/proySC/module/Application/view/layout/layout.phtml
@@ -82,7 +82,7 @@
             								        	defaults:{handler: buttonClick},
 														items:[
 														       {text: 'Mantener Moneda', codigo: 'moneda', modulo: 'cont'},
-														       {text: 'Mantener Tasa Cambio', codigo: 'tasa-cambio', modulo: 'cont'}
+														       {text: 'Mantener Tasa Cambio', codigo: 'moneda-conversion', modulo: 'cont'}
 														]
                 								    }
         								        },'-',
