--- a/Implementacion/proySC/module/Stock/view/stock/articulo/index-ui.phtml
+++ b/Implementacion/proySC/module/Stock/view/stock/articulo/index-ui.phtml
@@ -249,6 +249,8 @@ function formularioArticulo(isNew, data)
 									       }
 									       else
 									       {
+									           delete valores.cont_moneda_id;
+									           
 										       //sino es creacion
 									    	   //si esta todo ok hacemos la solicitud
 									    	   Ajax.PostElement.request({
@@ -256,7 +258,7 @@ function formularioArticulo(isNew, data)
 												   success: function(response, opt){
 													   mainStore.reload();
 												   },
-												   jsonData:{
+												   params:{
 												       'post': valores,
 													   'formulario': mainForm.id
 												   }
