modificaciones en interfaces y versiones basicas de crud de marca, categoria, garantia tipo * sin ningun tipo de validaciones

--- a/Implementacion/proySC/module/Application/view/layout/layout.phtml
+++ b/Implementacion/proySC/module/Application/view/layout/layout.phtml
@@ -72,7 +72,7 @@
 														       {text: 'Mantener Articulo', codigo: 'articulo', modulo: 'stock'},
 														       {text: 'Mantener Marca', codigo: 'marca', modulo: 'stock'},
 														       {text: 'Mantener Categoria', codigo: 'categoria', modulo: 'stock'},
-														       {text: 'Mantener Garantia Tipo', codigo: 'garantia_tipo', modulo: 'stock'}
+														       {text: 'Mantener Garantia Tipo', codigo: 'garantia-tipo', modulo: 'stock'}
 														]
                 								    }
         								        },'-',
